--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"dependencies": {
 		"express": "2.5.5",
-		"ejs": ">= 0.0.1"
+		"stylus": ">= 0.0.1",
+		"mongoose": ">= 0.0.1"
 	}
 }
