--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"express": "2.5.5",
 		"stylus": ">= 0.0.1",
-		"mongoose": ">= 0.0.1"
+		"mongoose": ">= 0.0.1",
+		"express-messages" : "latest"
 	}
 }
