--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"dependencies": {
 		"express": "2.5.5",
 		"stylus": ">= 0.0.1",
-		"mongoose": ">= 0.0.1",
+		"mongoose": "latest",
+		"mongoose-auth": "latest",
+		"everyauth": "latest",
 		"express-messages" : "latest"
 	}
 }
