First try at websockets. Update works, but data is not yet used.

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
 	"private": true,
 	"dependencies": {
 		"express": "2.5.5",
-		"stylus": ">= 0.0.1",
 		"mongoose": "latest",
 		"mongoose-auth": "latest",
 		"everyauth": "latest",
-		"express-messages" : "latest"
+		"express-messages" : "latest",
+		"socket.io": "latest"
 	}
 }
