--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"dependencies": {
 		"express": "2.5.5",
+		"ejs": "0.6.1",
 		"mongoose": "2.5.9",
 		"mongoose-auth": "0.0.12",
 		"everyauth": "0.2.30",
